# Riven

./: README.md  test-full.bash  test-min-deps.bash  test-wasm.bash
.github/workflows/: ci.yml
riven/: Cargo.toml
riven/src/: config.rs  endpoints.rs  lib.rs  meta.rs  metrics.rs  models.rs  riot_api.rs
riven/src/consts/: champion.rs  game_mode.rs  game_type.rs  map.rs  queue.rs  queue_type.rs  route.rs  season.rs
riven/src/req/: mod.rs  rate_limit.rs  regional_requester.rs  token_bucket.rs
riven/src/util/: mod.rs  notify.rs
riven/srcgen/: dotUtils.js  endpoints.rs.dt  lib.rs.dt
riven/srcgen/consts/: champion.rs.dt
riven/tests/: tests_americas.rs  tests_asia_jp.rs  tests_europe.rs  tests_euw.rs  tests_euw_tft.rs  tests_jp1_tft.rs  tests_la1.rs  tests_me1.rs  tests_na.rs  tests_rso.rs  tests_sg2.rs  tests_tr.rs  tests_tr_europe.rs  tests_val_latam.rs  tests_val_match_latam_na_br.rs  testutils.rs
